honda/ebs/securitygroup.tf
resource "aws_security_group" "honda_sg" {
    description = "allow ssh http https"
    vpc_id = aws_vpc.honda_vpc.id
   
    ingress  {
        description = "http"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = var.cidr
    } 
    ingress  {
        description = "ssh"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = var.cidr
    }
    egress  {
        description = "all traffic"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = var.cidr
    }
    tags = {
        Name = var.sgname
    }
    
}
